package app;

public interface Perintah {
    void eksekusi();
    void batal();
}
